--- a/struts2-study-parent/pom.xml
+++ b/struts2-study-parent/pom.xml
@@ -24,7 +24,7 @@
     
     <log4j2.version>2.19.0</log4j2.version>
     
-    <jackson.version>2.14.0</jackson.version>
+    <jackson.version>2.14.1</jackson.version>
     <jackson-databind.version>${jackson.version}</jackson-databind.version>
     <!-- 
       Struts에서 Jackson Databind를 따로 프로퍼티를 땃는지 이해가 안갔는데, 
@@ -166,10 +166,14 @@
       <artifactId>struts2-core</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+    </dependency>
     <!-- Apache Log4j SLF4J Binding  -->
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-slf4j-impl</artifactId>
+      <artifactId>log4j-slf4j2-impl</artifactId>
     </dependency>
 
     <dependency>
